--- a/Arduinopinic/templates/index.html
+++ b/Arduinopinic/templates/index.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 {% include 'header.html' %}
 <div class="container-fluid"> <!-- Main container -->
   <div class="row"> <!-- row for alerts to be popup -->
