--- a/Arduinopinic/templates/listing.html
+++ b/Arduinopinic/templates/listing.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 {% include 'header.html' %}
   <div class="container"> <!-- Main container -->
     <div class="row"> <!-- row for alerts to be popup -->
